# SpatialOmics-Foundation

./: DDS.md  README.md  SRS.md  WBS.md  data_io.py  datasets.md  mzml_to_mgf.py  pyproject.toml
.github/workflows/: ci.yml
MS_Spectral_Foundation/: bin_mz.py  mgf_parse.py  mzml_to_mgf_new.py  peak_filter.py
MS_Spectral_Foundation/output/: bins_first100.txt
MS_Spectral_Foundation/test/: test_bin_mz.py  test_mgf_parse.py  test_peak_filter.py  test_peak_filter_refactored.py
SpatialOmics-Foundation/: data_io.py  mgf_parse.py  peak_filter.py  peak_filter_refactored.py
SpatialOmics-Foundation/output/: spectra_filtered_first100.txt  spectra_first100.txt
SpatialOmics-Foundation/test/: test_peak_filter_refactored.py
SpatialOmics_Foundation/: bin_mz.py  mgf_parse.py  peak_filter.py  peak_filter_refactored.py  spectrum(external_reference_code).py
SpatialOmics_Foundation/test/: test_bin_mz.py  test_mgf_parse.py  test_peak_filter.py  test_peak_filter_refactored.py
codes_folder/: data_io.py
documentations/: DDS.md  SRS.md  WBS.md  datasets.md
intermediate & final files produced/: link_to_google_drive_folder_with_all_files.md
spatialomics_foundation.egg-info/: PKG-INFO  SOURCES.txt
